separate static info from index.html

--- a/colours.css
+++ b/colours.css
@@ -10,6 +10,7 @@ color:
 #525050
 #5f5f5f
 #8f8f8f
+#808080
 #afafaf
 #b5b5b5
 #cccccc
@@ -33,4 +34,31 @@ white
 #fad687
 
 }
+/*
+acid <i class="fas fa-vial"></i>
 
+cold <i class="far fa-snowflake"></i>
+
+fire <i class="fas fa-fire"></i>
+
+force <i class="fas fa-meteor"></i> <i class="fas fa-hand-paper"></i> <i class="fas fa-certificate"></i> <i class="fas fa-dot-circle"></i>
+
+lightning <i class="fas fa-bolt"></i>
+
+necrotic <i class="fas fa-skull"></i>
+
+poison <i class="fas fa-skull-crossbones"></i>
+
+psychic <i class="fas fa-brain"></i>
+
+radiant <i class="fas fa-sun"></i>
+
+thunder <i class="fas fa-bullseye"></i>
+
+bludgeoning <i class="fas fa-gavel"></i>
+
+slashing <i class="fas fa-moon"></i> <i class="fas fa-slash"></i>
+
+piercing <i class="fas fa-location-arrow"></i>
+
+*/
